# cpp-practice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command.txt  coverage.sh  package.json  temp.ps1  tsconfig.json
.github/workflows/: nodejs.yml
cmake/: ClangModule.cmake  CodeCoverage.cmake  ExternalProjects.cmake  UpdateTestFile.cmake
include/: functions.h  functions.hpp  headers.h  headers.hpp  index_max_heap.hpp  lib.hpp  list_node.hpp  max_heap.hpp  replace_words.hpp  tree_node.hpp  tree_printer.hpp  utils.hpp
scripts/: after-test.cjs  before-test.cjs  before-test.sh  ci-test-result-parse.cjs  coverage.cjs  coverage.sh  exe-wrapper.py  executionWrapper.cpp  executionWrapper_backup.cpp  executionWrapper_utf8.cpp  grcovDownloader.cpp  gtest.cc  lcov2json.cjs  llvm-gcov.bat  llvm-gcov.sh  out-test-result.cjs  postinstall.cjs  removeFirstTwoLines.cpp  replaceLastChineseCharBeforeDot.cpp  replaceNonChinese.cpp  replace_last_chinese_character.cpp  save_ansi_output.py  test copy 2.cpp  test.cjs  test.cpp  test1.cpp  unix-wrapper.sh  windowCheckUtf8Support.cpp  window_check_utf8_support.cpp  windows-wrapper.ps1
src/: main.cpp
src/array/: adding_two_negabinary_numbers.cpp  apply_operations_to_an_array.cpp  average_value_of_even_numbers_that_are_divisible_by_three.cpp  beautiful_arrangement_ii.cpp  best_time_to_buy_and_sell_stock.cpp  check_distances_between_same_letters.cpp  cherry_pickup.cpp  count_common_words_with_one_occurrence.cpp  count_vowel_strings_in_ranges.cpp  determine_if_two_events_have_conflict.cpp  equal_row_and_column_pairs.cpp  filling_bookcase_shelves.cpp  find_maximum_number_of_string_pairs.cpp  find_subarrays_with_equal_sum.cpp  find_the_kth_smallest_sum_of_a_matrix_with_sorted_rows.cpp  first_completely_painted_row_or_column.cpp  first_unique_character_in_a_string.cpp  flip_columns_for_maximum_number_of_equal_rows.cpp  house_robber.cpp  length_of_longest_fibonacci_subsequence.cpp  longest_alternating_subarray.cpp  longest_arithmetic_subsequence.cpp  longest_string_chain.cpp  make_two_arrays_equal_by_reversing_sub_arrays.cpp  maximum_fruits_harvested_after_at_most_k_steps.cpp  maximum_length_of_pair_chain.cpp  maximum_points_you_can_obtain_from_cards.cpp  maximum_profit_of_operating_a_centennial_wheel.cpp  maximum_sum_of_two_non_overlapping_subarrays.cpp  mean_of_array_after_removing_some_elements.cpp  min_cost_climbing_stairs.cpp  minimum_cost_to_merge_stones.cpp  minimum_cost_to_move_chips_to_the_same_position.cpp  minimum_difficulty_of_a_job_schedule.cpp  minimum_score_triangulation_of_polygon.cpp  minimum_seconds_to_equalize_a_circular_array.cpp  minimum_value_to_get_positive_step_by_step_sum.cpp  most_frequent_even_element.cpp  moving_average_from_data_stream.cpp  number_of_arithmetic_triplets.cpp  (+20 more)
src/graphs/: find_the_town_judge.cpp  flower_planting_with_no_adjacent.cpp  frog_position_after_t_seconds.cpp  minimize_the_total_price_of_the_trips.cpp  minimum_fuel_cost_to_report_to_the_capital.cpp  reorder_routes_to_make_all_paths_lead_to_the_city_zero.cpp
src/heap/: longest_valid_parentheses.cpp
src/lib/: lib.cpp  list_node.cpp  tree_node.cpp
src/list/: delete_node_in_a_linked_list.cpp  insert_greatest_common_divisors_in_linked_list.cpp  remove_duplicates_from_sorted_list.cpp  remove_duplicates_from_sorted_list_ii.cpp  remove_linked_list_elements.cpp  remove_zero_sum_consecutive_nodes_from_linked_list.cpp  swap_nodes_in_pairs.cpp
src/map/: first_letter_to_appear_twice.cpp  letter_tile_possibilities.cpp  powerful_integers.cpp  ransom_note.cpp  remove_letter_to_equalize_frequency.cpp  smallest_integer_divisible_by_k.cpp  swap_for_longest_repeated_character_substring.cpp
src/math/: add_strings.cpp  can_make_palindrome_from_substring.cpp  circle_and_rectangle_overlapping.cpp  convert_to_base_2.cpp  count_days_spent_together.cpp  count_of_integers.cpp  count_sorted_vowel_strings.cpp  day_of_the_week.cpp  find_the_pivot_integer.cpp  fraction_addition_and_subtraction.cpp  maximize_grid_happiness.cpp  maximum_rows_covered_by_columns.cpp  maximum_students_taking_exam.cpp  maximum_swap.cpp  minimum_cost_to_connect_two_groups_of_points.cpp  minimum_cuts_to_divide_a_circle.cpp  moving_stones_until_consecutive.cpp  next_greater_numerically_balanced_number.cpp  number_of_burgers_with_no_waste_of_ingredients.cpp  number_of_common_factors.cpp  robot_bounded_in_circle.cpp  rotated-digits.cpp  rotated_digits.cpp  smallest_even_multiple.cpp  smallest_sufficient_team.cpp
src/modules/: headers.cpp  stl.cpp
src/other/: minimum_additions_to_make_valid_string.cpp  tiling_a_rectangle_with_the_fewest_squares.cpp
src/search/: climbing_stairs.cpp  flip_chess.cpp  freedom_trail.cpp  making_a_large_island.cpp  minimum_moves_to_move_a_box_to_their_target_location.cpp  number_of_closed_islands.cpp  path_with_minimum_effort.cpp  pond_sizes_lcci.cpp  shortest_path_in_binary_matrix.cpp
src/sort/: bubble_sort.cpp  buy_two_chocolates.cpp  car_pooling.cpp  compare_strings_by_frequency_of_the_smallest_character.cpp  distant_barcodes.cpp  greatest_sum_divisible_by_three.cpp  heap_sort.cpp  insert_sort.cpp  largest_positive_integer_that_exists_with_its_negative.cpp  largest_values_from_labels.cpp  make_array_strictly_increasing.cpp  maximum_earnings_from_taxi.cpp  maximum_tastiness_of_candy_basket.cpp  merge_sort.cpp  merge_two_sorted_lists.cpp  mice_and_cheese.cpp  moving_stones_until_consecutive_ii.cpp  next_greater_element_iv.cpp  number_of_distinct_averages.cpp  quick_sort.cpp  removing_minimum_number_of_magic_beans.cpp  select_sort.cpp  sort_the_people.cpp  swap_nodes_in_pairs.cpp  widest_vertical_area_between_two_points_containing_no_points.cpp
src/stack/: add_two_numbers_ii.cpp  check_if_word_is_valid_after_substitutions.cpp  crawler_log_folder.cpp  dinner_plate_stacks.cpp  implement_queue_using_stacks.cpp  longest_valid_parentheses.cpp  minimum_cost_tree_from_leaf_values.cpp  minimum_string_length_after_removing_substrings.cpp  next_greater_node_in_linked_list.cpp  number_of_visible_people_in_a_queue.cpp  (+1 more)
test/: add_test.cpp  main.test.cpp  main_test.cpp
(+232 files in other folders)
